test/negative/duplicate_declaration.mli
type t

(*@ type t *)

(* {gospel_expected|
   [125] Internal error: no filename location for the following error
         Error: A declaration for `t' already exists in this context.
   |gospel_expected} *)
